Changes to support HEI use case

--- a/app/views/location/upload.html
+++ b/app/views/location/upload.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = "Upload training location data" %}
+{% set title = "Upload location data" %}
 
 {% block pageNavigation %}
   {{ govukBreadcrumbs({
