--- a/app/views/new/placement-policy.html
+++ b/app/views/new/placement-policy.html
@@ -36,9 +36,16 @@
         }]
       }) }}
 
-      {{ govukButton({
-        text: "Continue"
-      }) }}
+      {% if editing %}
+        {{ govukButton({
+          text: "Save and publish changes"
+        }) }}
+        <p class="govuk-body"><a href="{{ paths.back }}">Cancel changes</a></p>
+      {% else %}
+        {{ govukButton({
+          text: "Continue"
+        }) }}
+      {% endif %}
     </div>
   </form>
 {% endblock %}
