--- a/app/views/new/training-location.html
+++ b/app/views/new/training-location.html
@@ -34,9 +34,16 @@
         items: items
       }) }}
 
-      {{ govukButton({
-        text: "Continue"
-      }) }}
+      {% if change %}
+        {{ govukButton({
+          text: "Save and publish changes"
+        }) }}
+        <p class="govuk-body"><a href="{{ paths.back }}">Cancel changes</a></p>
+      {% else %}
+        {{ govukButton({
+          text: "Continue"
+        }) }}
+      {% endif %}
     </div>
   </form>
 {% endblock %}
