--- a/app/views/new/languages.html
+++ b/app/views/new/languages.html
@@ -54,9 +54,16 @@
         }]
       }) }}
 
-      {{ govukButton({
-        text: "Continue"
-      }) }}
+      {% if change %}
+        {{ govukButton({
+          text: "Save and publish changes"
+        }) }}
+        <p class="govuk-body"><a href="{{ paths.back }}">Cancel changes</a></p>
+      {% else %}
+        {{ govukButton({
+          text: "Continue"
+        }) }}
+      {% endif %}
     </div>
   </form>
 {% endblock %}
