--- a/app/views/new/placement-policy.html
+++ b/app/views/new/placement-policy.html
@@ -36,7 +36,7 @@
         }]
       }) }}
 
-      {% if editing %}
+      {% if change %}
         {{ govukButton({
           text: "Save and publish changes"
         }) }}
