--- a/app/views/new/subject.html
+++ b/app/views/new/subject.html
@@ -186,9 +186,16 @@
         }) if data[code + "-phase"] == "Secondary" }}
       {% endcall %}
 
-      {{ govukButton({
-        text: "Continue"
-      }) }}
+      {% if change %}
+        {{ govukButton({
+          text: "Save and publish changes"
+        }) }}
+        <p class="govuk-body"><a href="{{ paths.back }}">Cancel changes</a></p>
+      {% else %}
+        {{ govukButton({
+          text: "Continue"
+        }) }}
+      {% endif %}
     </div>
   </form>
 {% endblock %}
