--- a/app/views/locations/index.html
+++ b/app/views/locations/index.html
@@ -56,7 +56,7 @@
   }) if justEdited }}
 
   {{ govukNotificationBanner({
-    text: "16 new locations added.",
+    text: data.uploadedLocations.length + " new locations added.",
     type: "success"
   }) if justUploaded }}
 
