Change "3rd" to "Third"

--- a/app/views/course/index.html
+++ b/app/views/course/index.html
@@ -410,7 +410,7 @@
             {% elif minDegreeClass == "22" %}
               2:2 or above, or equivalent
             {% elif minDegreeClass == "3" %}
-              3rd class degree or above, or equivalent
+              Third class degree or above, or equivalent
             {% endif %}
           {% else %}
             <a class="govuk-link" href="{{ coursePath }}/degree">Do you require a minimum degree classification?</a>
