--- a/app/views/course/degree-level.html
+++ b/app/views/course/degree-level.html
@@ -40,7 +40,7 @@
           checked: (data[radioName] === "22")
         }, {
           value: "3",
-          text: "3rd or above (or equivalent)",
+          text: "Third or above (or equivalent)",
           checked: (data[radioName] === "3")
         }]
       }) }}
