--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -176,7 +176,7 @@
             {% elif minDegreeClass == "22" %}
               An undergraduate degree at class 2:2 or above, or equivalent.
             {% elif minDegreeClass == "3" %}
-              An undergraduate degree, or equivalent. This should be an honours degree (3rd), or equivalent.
+              An undergraduate degree, or equivalent. This should be an honours degree (Third or above), or equivalent.
             {% endif %}
           {% else %}
             {# Show missing message #}
