--- a/app/views/about-your-organisation/contact.html
+++ b/app/views/about-your-organisation/contact.html
@@ -15,6 +15,7 @@
 
         {{ govukInput({
           label: {
+            classes: "govuk-label--m",
             text: "Email address"
           },
           hint: {
@@ -29,6 +30,7 @@
 
         {{ govukInput({
           label: {
+            classes: "govuk-label--m",
             text: "Telephone number"
           },
           hint: {
@@ -43,6 +45,7 @@
 
         {{ govukInput({
           label: {
+            classes: "govuk-label--m",
             text: "Website"
           },
           hint: {
