Remove back link from interstitial after sign in

--- a/app/views/rolled-over.html
+++ b/app/views/rolled-over.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% set title = "Prepare for the next cycle" %}
-{% set backLink = "/cycles" %}
+{% if data["from"] == "cycles" %}
+  {% set backLink = "/cycles" %}
+{% endif %}
 
 {% block content %}
   <div class="govuk-grid-row">
