--- a/app/views/sign-in.html
+++ b/app/views/sign-in.html
@@ -19,7 +19,7 @@
 
       <p class="govuk-body-m">Use DfE Sign-in to access your account.</p>
 
-      {{ govukButton({text: "Sign in using DfE Sign-in", href: "/rolled-over"}) }}
+      {{ govukButton({text: "Sign in using DfE Sign-in", href: "/rolled-over?from=sign-in"}) }}
 
       <p class="govuk-body-m">
         If you do not have a DfE Sign-in account but need access to Publish teaching training email <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk">becomingateacher@digital.education.gov.uk</a>.
