--- a/app/views/cycles.html
+++ b/app/views/cycles.html
@@ -41,7 +41,7 @@
       <div class="status-box">
         <h2 class="govuk-heading-m">Prepare for the next cycle</h2>
         <p class="govuk-body">Courses for the next cycle will be published on 1&nbsp;September&nbsp;2021.</p>
-        <p class="govuk-body"><a href="/rolled-over" class="govuk-link">What you need to do</a></p>
+        <p class="govuk-body"><a href="/rolled-over?from=cycles" class="govuk-link">What you need to do</a></p>
 
         <h2 class="govuk-heading-m">Support and guidance</h2>
         <p class="govuk-body">If you have a question, or you’ve had a problem using Publish, you can email:</p>
