--- a/app/views/locations/index.html
+++ b/app/views/locations/index.html
@@ -66,8 +66,8 @@
   </h1>
 
   <div class="govuk-!-width-two-thirds">
-    <p class="govuk-body">Locations are used to help rank search results on Find.</p>
-    <p class="govuk-body">For courses where candidates can choose a lead or host school, you can also assign locations from the ‘Basic details’ tab on the course page.</p>
+    <p class="govuk-body">Most candidates search for courses by location.</p>
+    <p class="govuk-body">Adding all locations means your courses will appear in as many searches as possible.</p>
   </div>
 
   {% set buttonHtml %}
