--- a/app/views/locations/index.html
+++ b/app/views/locations/index.html
@@ -67,7 +67,7 @@
 
   <div class="govuk-!-width-two-thirds">
     <p class="govuk-body">Most candidates search for courses by location.</p>
-    <p class="govuk-body">If a candidate can choose a lead or host school when they apply, you can indicate this from in the ‘Basic details’ tab on the course page.</p>
+    <p class="govuk-body">If a candidate can choose a lead or host school when they apply, you can indicate this from the ‘Basic details’ tab on the course page.</p>
   </div>
 
   {% set buttonHtml %}
