--- a/app/views/locations/index.html
+++ b/app/views/locations/index.html
@@ -66,8 +66,8 @@
   </h1>
 
   <div class="govuk-!-width-two-thirds">
-    <p class="govuk-body">Most candidates search for courses by location.</p>
-    <p class="govuk-body">If a candidate can choose a lead or host school when they apply, you can indicate this from the ‘Basic details’ tab on the course page.</p>
+    <p class="govuk-body">Add all locations. There is no limit on how many you can add.</p>
+    <p class="govuk-body">Most candidates search for courses by location. If they can choose a lead or host school when they apply, you can indicate this from the ‘Basic details’ tab on the course page.</p>
   </div>
 
   {% set buttonHtml %}
