Update rollover email

--- a/app/views/emails/rollover.html
+++ b/app/views/emails/rollover.html
@@ -7,7 +7,7 @@
 
   <h2 class="govuk-heading-m">Updating your courses</h2>
   <p class="govuk-body">We will copy your courses (including withdrawn and unpublished ones) as a basis for the next cycle.</p>
-  <p class="govuk-body">From 6 July, when you sign in to Publish teacher training courses you’ll see a new section titled ‘Next cycle (2022 to 2023)’. In this section, you can:</p>
+  <p class="govuk-body">From 6 July, when you sign in to <a href="/sign-in">Publish teacher training courses</a> you’ll see a new section titled ‘Next cycle (2022 to 2023)’. In this section, you can:</p>
   <ul class="govuk-list govuk-list--bullet">
     <li>add any new courses you’re running for the first time in 2021 to 2022</li>
     <li>check the information on your current courses, and update it if needed</li>
