Highlight missing school placement locations value

--- a/app/views/course/index.html
+++ b/app/views/course/index.html
@@ -154,6 +154,14 @@
     }) %}
   {% endif %}
 
+  {# Placement locations #}
+  {% if data[code + "-locations"].length == 0 %}
+    {% set result = actionsList.push({
+      text: "Where will candidates be placed?",
+      href: "/new/" + data["provider-code"] + "/placement-locations?change=true"
+    }) %}
+  {% endif %}
+
   {# An academic training location was required for rollover in 2021 #}
   {% if not data[code + "-training-location"] %}
     {% set result = actionsList.push({
