--- a/app/views/course/index.html
+++ b/app/views/course/index.html
@@ -155,7 +155,7 @@
   {% endif %}
 
   {# Placement locations #}
-  {% if data[code + "-locations"].length == 0 %}
+  {% if data[code + "-locations"].length == 0 and data["placement-policy"] == "hosted" %}
     {% set result = actionsList.push({
       text: "Where will candidates be placed?",
       href: "/new/" + data["provider-code"] + "/placement-locations?change=true"
