--- a/app/views/location/index.html
+++ b/app/views/location/index.html
@@ -71,12 +71,12 @@
           },
           checked: checked(code + "-location-type", "Placement school")
         }, {
-          value: "Academic training location",
-          text: "Academic training location",
+          value: "Centre based training location",
+          text: "Centre based training location",
           hint: {
-            text: "University or college campus or other location used for academic learning"
+            text: "University or college campus or other location used for centre based training"
           },
-          checked: checked(code + "-location-type", "Academic training location")
+          checked: checked(code + "-location-type", "Centre based training location")
         }]
       }) }}
 
