--- a/app/views/new/training-location.html
+++ b/app/views/new/training-location.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = "Where will candidates do their academic training?" %}
+{% set title = "Where will candidates do their centre based training?" %}
 {% set backLink = paths.back %}
 
 {% set result = items.push({
