--- a/app/views/emails/rollover.html
+++ b/app/views/emails/rollover.html
@@ -19,7 +19,7 @@
   <p class="govuk-body">For the next cycle, we have made changes that will help candidates find your courses, and meet your requirements. You will be able to:</p>
   <ul class="govuk-list govuk-list--bullet">
     <li>add all of your school placement and academic locations. There is no longer a limit on how many you can add.</li>
-    <li>confirm if you can sponsor a student visa.</li>
+    <li>confirm if you can sponsor visas.</li>
     <li>give more details about your academic requirements (for example, if you need candidates to have a 2:1 at degree level).</li>
   </ul>
   <p class="govuk-body">When updating Publish teacher training courses for the next cycle, these sections will be highlighted for you to edit.</p>
