--- a/app/views/rolled-over.html
+++ b/app/views/rolled-over.html
@@ -27,12 +27,12 @@
 
       <p>All applications will be made via Apply for teaching training, not UCAS.</p>
 
-      <p>For each course, you will need to confirm:</p>
+      <p>You will need to confirm:</p>
 
       <ol class="govuk-list govuk-list--number">
         <li>degree requirements</li>
         <li>GCSE requirements</li>
-        <li>visa sponsorship</li>
+        <li>whether you can sponsor visas</li>
         <li>locations of school placements</li>
       </ol>
 
