bugfix: needs this class

--- a/app/views/about-your-organisation/index.html
+++ b/app/views/about-your-organisation/index.html
@@ -247,6 +247,7 @@
         }
       },
       {
+        classes: macros.requiredSummaryRowClasses("canSponsorStudentVisa"),
         key: {
           text: "Visas"
         },
